# experience

./: CMakelinkdebugrelease.txt  DLL导出类-方法及其使用.doc  Linux增加环境变量.txt  Linux建立软连接.txt  Python_test.py  Python_xml.txt  Python_编译.txt  Python_调用bat.txt  QProcess命令行传参.txt  Qt.docx  VAssistX.txt  VS_xxxx.user的作用.txt  attachConsole.txt  bat常用指令.txt  bat当前用户路径.txt  bat显示输出.txt  c++.txt  c++_dumpbin_常用.docx  c++附加父命令行窗口到子窗口并重定向输出输入.txt  cmake.txt  cmake_add_subdirectory.txt  cmake_install示例.txt  cmake_使用qt.txt  cmake_去掉控制台.txt  cmake_安装.txt  cmake_安装功能.txt  cmake_项目示例(option,下拉列表等).txt  cmake使用示例与整理  cmake常用方法  cmake常用方法txt  cmd_调用exe.txt  common.py  everything.txt  linear_static.py  linux_#!.txt  linux_chmod.txt  linux修改只读文件.txt  linux安装ssh.txt  linux安装软件.txt  linux小知识点.txt  (+89 more)
Qt_splitter_特殊符号_文件目录_文件过滤器_qwindow插件/RCS_Display/: RCS_Display.opensdf  RCS_Display.sln
c++反射/: classfactory.cpp  classfactory.h  datainterface.cpp  datainterface.h  forceconditiondata.cpp  forceconditiondata.h  registerclassaction.cpp  registerclassaction.h  stepdata.cpp  stepdata.h
cmake_multi-platform_demo/: CMakeLists.txt
cmake_multi-platform_demo/reader/: CMakeLists.txt
cmake_multi-platform_demo/src/: CMakeLists.txt  VKIReader.h  abaqusInputGen.cpp  solverFactory.cpp  solverFactory.h  solverGen.h
cmake跨平台demo/: CMakeLists.txt
cmake跨平台demo/reader/: CMakeLists.txt  VKIReader.cpp  VKIReader.h
cmake跨平台demo/src/: CMakeLists.txt  abaqusInputGen.h  cmdline.h  main.cpp  solverGen.cpp
devProject/: Makefile.win  a.txt  main.cpp  newConsole.dev  run.bat  setStdHandle.dev  setbuf.dev  setbuf.layout
javaScript/: My test page.html  htmlInput.html
material/: CMakeLists.txt  imaterialdimensionconvert.h  main.cpp  materialapi.cpp  materialapi.h  materialchart.cpp  materialchart.h  materialchartview.cpp  materialchartview.h  materialclipboardmanager.cpp  materialclipboardmanager.h  materialcomboboxdelegate.cpp  materialcomboboxdelegate.h  materialconfigparser.cpp  materialconfigparser.h  materialdatadef.h  materialdimensionconvert.cpp  materialdimensionconvert.h  materialfilemodel.cpp  materialfilemodel.h  materialfileparser.cpp  materialfileparser.h  materialglobal.h  materiallineeditdelegate.cpp  materiallineeditdelegate.h  materiallineseries.cpp  materiallineseries.h  materialmenubar.cpp  materialmenubar.h  materialmodel.cpp  materialmodel.h  materialpropertytreemodel.cpp  materialpropertytreemodel.h  materialsavedialog.cpp  materialsavedialog.h  materialtablemodel.cpp  materialtablemodel.h  materialtableview.cpp  materialtableview.h  materialtoolbar.cpp  (+11 more)
python_模板使用/: fdtd_parameters_template.pattern  po_parameters_template.pattern  py文件中已经替换的变量.txt  simulation_parameters_template.pattern  transform.py
项目记录/: centos7安装Python2.7.10.txt  使用easy_install安装numpu.txt
(+222 files in other folders)
